--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 5000
 MONGO_URI= 'mongodb+srv://Sami:Andrea1990.@cluster0.hrirt3m.mongodb.net/?retryWrites=true&w=majority'
+JWT_SECRET = saminoorsyed
